# testenvion

./: Cargo.toml  LICENSE  README.md  TODO.md
examples/: generic_api.rs  kraken_trading.rs  simple.rs
src/: coinnect.rs  error.rs  exchange.rs  lib.rs  pair.rs  types.rs
src/bitstamp/: api.rs  generic_api.rs  utils.rs
src/helpers/: mod.rs
src/kraken/: api.rs  generic_api.rs  mod.rs  utils.rs
src/poloniex/: api.rs  generic_api.rs  utils.rs
tests/: bitstamp.rs  coinnect.rs  exchange.rs  kraken.rs  poloniex.rs
