[package]
name = "coinnect"
version = "0.2.1"
license = "MIT"
authors = ["Hugues Gaillard <hugues.gaillard@me.com>", "Alejandro Inestal"]
description = """
A Rust library to connect to various crypto-currencies exchanges.
"""
documentation = "https://docs.rs/coinnect/"
homepage = "https://github.com/hugues31/coinnect"
repository = "https://github.com/hugues31/coinnect"
keywords = [ "bitcoin", "trading", "poloniex", "kraken", "bitstamp" ]
readme = "README.md"

[features]
default = []
bitstamp_private_tests = []
kraken_private_tests = []
poloniex_private_tests = []

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "kraken_trading"
path = "examples/kraken_trading.rs"

[[